--- a/src/css/layout.scss
+++ b/src/css/layout.scss
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&family=Noto+Sans+KR:wght@400;500;700&display=swap");
 html {
   height: 100%;
 }
@@ -5,6 +6,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
+  font-family: "Noto Sans KR", sans-serif;
 }
 #app {
   display: flex;
